--- a/novo-core/CMakeLists.txt
+++ b/novo-core/CMakeLists.txt
@@ -30,3 +30,28 @@ target_link_libraries(${CORE_PROJECT_NAME} PUBLIC glad)
 add_subdirectory(../external/glm ${CMAKE_CURRENT_BINARY_DIR}/glm)
 
 target_link_libraries(${CORE_PROJECT_NAME} PUBLIC glm)
+
+
+set(IMGUI_INCLUDES
+    ../external/imgui/imgui.h
+    ../external/imgui/backends/imgui_impl_glfw.h
+    ../external/imgui/backends/imgui_impl_opengl3.h
+)
+
+set(IMGUI_SOURCES
+    ../external/imgui/imgui.cpp
+    ../external/imgui/backends/imgui_impl_glfw.cpp
+    ../external/imgui/backends/imgui_impl_opengl3.cpp
+    ../external/imgui/imgui_demo.cpp
+    ../external/imgui/imgui_draw.cpp
+    ../external/imgui/imgui_tables.cpp
+    ../external/imgui/imgui_widgets.cpp
+)
+
+add_library(imgui STATIC ${IMGUI_INCLUDES} ${IMGUI_SOURCES})
+
+target_include_directories(imgui PUBLIC ../external)
+target_include_directories(imgui PUBLIC ../external/imgui)
+target_link_libraries(imgui PRIVATE glad glfw)
+
+target_link_libraries(${CORE_PROJECT_NAME} PUBLIC imgui)
