--- a/novo-editor/CMakeLists.txt
+++ b/novo-editor/CMakeLists.txt
@@ -11,3 +11,8 @@ add_executable(${EDITOR_PROJECT_NAME}
 target_link_libraries(${EDITOR_PROJECT_NAME} novo-core)
 
 set_target_properties(${EDITOR_PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_custom_command(TARGET ${EDITOR_PROJECT_NAME} POST_BUILD 
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/${EDITOR_PROJECT_NAME}/res $<TARGET_FILE_DIR:${EDITOR_PROJECT_NAME}>/res
+)
